# fortiposture

./: .gitignore  CLAUDE.md  README.md  fmg_export.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml  publish.yml  security-audit.yml
docs/: architecture.md  checks.md
docs/examples/: README.md  fw-branch-risky.conf  fw-hq-clean.conf
fortiposture/: __init__.py  cli.py  database.py  utils.py
fortiposture/analysis/: checks.py  scoring.py
fortiposture/models/: schema.py
fortiposture/output/: __init__.py  csv_export.py  html_report.py
fortiposture/parser/: conf_parser.py  normalizer.py
tests/: conftest.py  test_checks.py  test_normalizer.py  test_output.py  test_parser.py  test_schema.py  test_utils.py
tests/fixtures/: any_any_rule.conf  eol_firmware.conf  geoblock_bypass.conf  geoblock_unused.conf  geoblock_with_localin.conf  management_exposed.conf  missing_deny_all.conf  multi_vdom.conf  no_geoblock.conf  no_ntp.conf  shadowed_rules.conf  simple_policy.conf  strong_vpn.conf  weak_admin.conf  weak_snmp.conf  weak_vpn.conf
