[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fortiposture"
version = "0.1.0"
description = "FortiGate firewall configuration security posture assessment"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
fmg = ["pyfortimanager>=1.0"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
fortiposture = "fortiposture.cli:app"
