[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fortiposture"
version = "0.1.3"
description = "FortiGate firewall configuration security posture assessment"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "cloud-cyber-guard", email = "noreply@cloud-cyber-guard.com"},
]
keywords = ["fortigate", "fortinet", "firewall", "security", "posture", "audit", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
fmg = ["pyfortimanager>=1.0"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/cloud-cyber-guard/fortiposture"
Source = "https://github.com/cloud-cyber-guard/fortiposture"
"Bug Tracker" = "https://github.com/cloud-cyber-guard/fortiposture/issues"

[project.scripts]
fortiposture = "fortiposture.cli:app"
